<resources>
    <string name="app_name">AceData</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="menu_datalist">Data List</string>
    <string name="menu_retrylist">Retry List</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="editTextPhone">Enter your Phone Number</string>
    <string name="editTextPersonname">Enter your Name</string>
    <string name="editTextAddress">Enter your Address</string>
    <string name="editAdhar">Enter Adhar</string>
    <string name="buttonimage1">Select image 1</string>
    <string name="buttonimage2">Select image 2</string>
    <string name="buttonimage3">Select image 3</string>
    <string name="buttonimage4">Select image 4</string>
    <string name="textViewImage1">Image name and size will appear here</string>
    <string name="textViewImage2">Image name and size will appear here</string>
    <string name="textViewImage3">Image name and size will appear here</string>
    <string name="textViewImage4">Image name and size will appear here</string>

</resources>