<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@id/buttonimage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/buttonimage1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@id/textViewimage1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:scrollHorizontally="false"
        android:text="@string/textViewImage1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonimage1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@id/buttonimage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/buttonimage2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonimage1" />

    <TextView
        android:id="@id/textViewimage2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:scrollHorizontally="false"
        android:text="@string/textViewImage2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonimage1"
        app:layout_constraintTop_toBottomOf="@+id/textViewimage1" />

    <Button
        android:id="@id/buttonimage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/buttonimage3"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonimage2" />

    <TextView
        android:id="@id/textViewimage3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:scrollHorizontally="false"
        android:text="@string/textViewImage3"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonimage1"
        app:layout_constraintTop_toBottomOf="@+id/textViewimage2" />

    <Button
        android:id="@id/buttonimage4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/buttonimage4"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonimage3" />

    <TextView
        android:id="@+id/textViewimage4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:scrollHorizontally="false"
        android:text="@string/textViewImage4"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonimage1"
        app:layout_constraintTop_toBottomOf="@+id/textViewimage3" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/teal_200"
        android:text="Upload"
        android:textSize="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:cornerRadius="15dp"
        android:fontFamily="@font/audiowide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonimage4"  />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Upload Your Images"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/aldrich"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>