<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Enter Your Details"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/aldrich"
             />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextTextPersonName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/editTextPersonname"
                android:ems="10"
                android:hint="@string/editTextPersonname"
                android:inputType="textPersonName"
                android:textSize="14sp"
           >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextAdhar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/editAdhar"
                android:ems="10"
                android:hint="@string/editAdhar"
                android:inputType="textPersonName"
                android:textSize="14sp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextAdhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/editTextAddress"
                android:ems="10"
                android:hint="@string/editTextAddress"
                android:inputType="textPersonName"
                android:textSize="14sp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/editTextPhone"
                android:ems="10"
                android:hint="@string/editTextPhone"
                android:inputType="textPersonName"
                android:textSize="14sp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/teal_200"
                android:text="Save Details"
                android:textAllCaps="false"
                android:textSize="24dp"
                app:cornerRadius="15dp"
             />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>